modified tests and added new playlist dto